--- a/Account_/PC_Inner_Info_ViewController.xib
+++ b/Account_/PC_Inner_Info_ViewController.xib
@@ -73,7 +73,7 @@
                     </constraints>
                     <viewLayoutGuide key="safeArea" id="E0c-yC-ObG"/>
                 </view>
-                <button opaque="NO" clipsSubviews="YES" alpha="0.5" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZBX-Aa-Lpo">
+                <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZBX-Aa-Lpo">
                     <rect key="frame" x="20" y="593" width="335" height="52"/>
                     <color key="backgroundColor" red="0.0" green="0.60784313729999995" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
